# eman2

./: A.cpp  A.h  CMakeLists.txt  Jenkinsfile  a.cpp  a.h
B1/B2/: b.h
broken/: e22.py  e2fileinfo.py  e2findsubunit.py  e2flick.py  e2helical_recons.py  e2markbadparticles.py  e2modeleval.py  e2montecarlorecon.py  e2preferences.py  e2refine_evenodd.py  e2refmerge.py  e2remoted.py  e2resolution.py  e2scp.py  e2tomoaverage.py  em3Dhelloworld.py
ci_support/: build_no_recipe.sh  cluster_message.sh  construct.yaml  post-install-actions.bat  post-install-actions.sh  rsync_wrapper.bat  setup_conda.sh
cmake/: OpenGL.cmake
dir1/dir2/: dir_header.h
doc/wiki/: generate_options.sh
examples/: breakbrick.py  crystal_index.py  ddd_simulation.py  displaydemo.py  drawshape.py  e2compare2pdb.py  e2cylinder.py  e2extension_change.py  e2fftsynth.py  e2fscallxtal.py  e2melonball.py  e2moviealigner.py  e2moviealigner2.py  e2moviealigner3.py  e2movieboxer.py  e2orthoproject.py  e2plot_de_motion.py  e2plotfig.py  e2ptclbscmp.py  e2ptclfsc_multi.py  e2reboxer.py  e2segmask.py  e2simrecon.py  e2simulate.py  e2slicer.py  e2spt_align_translate.py  e2spt_autocenter.py  e2spt_bfactorplot.py  e2spt_boxer22.py  e2spt_boxer_old.py  e2spt_coordsrefactor.py  e2spt_eval_orient.py  e2spt_extract_align.py  e2spt_group.py  e2spt_icethicknessplot.py  e2spt_meanintensityplot.py  e2spt_radialdensityplot.py  e2spt_refprep.py  e2spt_rotationalplot.py  e2spt_sgd.py  (+23 more)
libEM/: emdata.cpp  transform.h  util.cpp
libEM/pmconfig/: boxer.json  breaksym.json  buildstacks.json  ctfautofit.json  ctfgo.json  ctfsf.json  ctftuning.json  icons.json  runtiltvalidation.json  spr.json  spt.json  symaligner.json  tomo.json
libEM/sparx/temp/voldist/: runcartrec.cpp
libpyEM/: A.cpp  Anneal.py  CMakeLists.txt  EMAN2.py  EMAN2PAR.py  EMAN2_utils.py  EMAN2db.py  EMAN2jsondb.py  EMAN2star.py  libpyA.cpp  libpyMarchingCubes2.cpp  libpyTransform2.cpp  libpyUtils2.cpp  marchingcubes.cpp  marchingcubes.h
libpyEM/qtgui/: em3Dfonts.py  emanimationutil.py  emapplication.py  emboxerbase.py  embrowser.py  emdataitem3d.py  emdatastorage.py  emfoldhunterstat.py  emform.py  emglobjects.py  emhist.py  emimage.py  emimage2d.py  emimage3d.py  emimage3diso.py  emimage3dmorph.py  emimage3dslice.py  emimage3dsym.py  emimage3dvol.py  emimagemx.py  emimageutil.py  emitem3d.py  emlights.py  empdbitem3d.py  empdbviewer.py  emplot2d.py  emplot3d.py  empmtabwidgets.py  empmwidgets.py  emrctboxergui.py  emrctstrategy.py  emsave.py  emscene3d.py  emselector.py  emshapeitem3d.py  emsprworkflow.py  emtprworkflow.py  valslider.py
programs/: e2RCTboxer.py  e2_real.py  e2a2d_align.py  e2a2d_average.py  e2a2d_stat.py  e2align2d.py  e2align3d.py  e2basis.py  e2bdb.py  e2boxadjust.py  e2boxer.py  e2boxer_old.py  e2buildsets.py  e2buildstacks.py  e2classaverage.py  e2classes_denovo.py  e2classesbyref.py  e2classextract.py  e2classify.py  e2classifykmeans.py  e2classifyligand.py  e2classifytree.py  e2classvsproj.py  e2cmpxplor.py  e2ctf.py  e2ctf2eman1.py  e2ctf_auto.py  e2ctffind3util.py  e2ctfsim.py  e2ddd_movie.py  e2ddd_particles.py  e2ddd_refs.py  e2ddd_tomo.py  e2display.py  e2erasefiducials.py  e2euler_refine.py  e2eulerxplor.py  e2evalimage.py  e2evalparticles.py  e2evalrefine.py  (+89 more)
pyemtbx/: boxertools.py
recipes/eman/: build.sh  meta.yaml
rt/demo/: scene3d_test.py
rt/pyem/: test_imageio.py  test_processor.py
sparx/doc/Tutorial/: README.md
sparx/templates/: sxgui_template.py
tests/: run_tests.sh  test_git_hash.sh
tests/gui/: .coveragerc  conftest.py  test_e2boxer.py  test_e2projectmanager.py  test_e2tiltvalidate.py
